--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "firebase": "^5.10.1",
     "mockjs": "^1.0.1-beta3",
+    "node-sass": "^4.12.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-remote-svg": "^1.2.0",
