--- a/package.json
+++ b/package.json
@@ -25,8 +25,5 @@
     "node-sass": "^4.12.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "react-native-remote-svg": "^1.2.0",
-    "react-native-simple-table": "0.0.3",
-    "react-table": "^6.10.0"
-  }
+    "react-native-remote-svg": "^1.2.0"  }
 }
