--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "node-sass": "^4.12.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "react-native-remote-svg": "^1.2.0"  }
+    "react-native-elements": "^1.1.0",
+    "react-native-remote-svg": "^1.2.0",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.9.1"
+  }
 }
